Apply org.openrewrite.java.migrate.UpgradeToJava21